force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BypassValidationCheckbox__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationCheckbox__c</fullName>
    <formula>BLANKVALUE(CurrentValidationTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <label>BypassValidationCheckbox</label>
    <type>Checkbox</type>
</CustomField>