force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Custom_Discount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Discount__c</fullName>
    <formula>IF(
((ISNULL(SBQQ__Discount__c) || ISBLANK(SBQQ__Discount__c)) &amp;&amp; SBQQ__Markup__c = 0.00),
(SBQQ__AdditionalDiscountAmount__c / SBQQ__ListTotal__c),
IF(((ISNULL(SBQQ__Discount__c) || ISBLANK(SBQQ__Discount__c)) &amp;&amp; SBQQ__Markup__c &gt; 0.00), (SBQQ__AdditionalDiscountAmount__c / SBQQ__SpecialPrice__c), SBQQ__Discount__c)
)</formula>
    <label>Custom Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>