force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Custom_Markup__c.field-meta.xml
<CustomField>
    <fullName>Custom_Markup__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__MarkupRate__c)), SBQQ__UnitCost__c * SBQQ__MarkupRate__c, SBQQ__UnitCost__c + SBQQ__MarkupAmount__c)</formula>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>