force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Period__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Period__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Delivery_period__c)</formula>
    <label>Delivery Period</label>
    <type>Text</type>
</CustomField>