force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <formula>IF(
ISBLANK(SBQQ__Product__r.SBQQ__ProductPictureID__c),
&quot;https://etechacesmarketingandconsultingpv2.file.force.com/servlet/servlet.ImageServer?id=015IS0000023tuAYAQ&amp;oid=&quot; &amp; $Organization.Id,
&quot;https://etechacesmarketingandconsultingpv2.file.force.com/servlet/servlet.ImageServer?id=&quot; &amp; SBQQ__Product__r.SBQQ__ProductPictureID__c &amp; &quot;&amp;oid=&quot; &amp; $Organization.Id
)</formula>
    <label>Image Link</label>
    <type>Text</type>
</CustomField>