force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parent_SapCode__c.field-meta.xml
<CustomField>
    <fullName>Parent_SapCode__c</fullName>
    <formula>SBQQ__ProductOption__r.Material_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent SapCode</label>
    <type>Text</type>
</CustomField>