force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Connected_Power_Each_Machines__c.field-meta.xml
<CustomField>
    <fullName>Total_Connected_Power_Each_Machines__c</fullName>
    <description>Total Connected Power * Quantity</description>
    <formula>SBQQ__Product__r.Total_Connected_Power__c  *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Connected Power Each Machines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>