force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Consumption_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumption_Cycle__c</fullName>
    <formula>SBQQ__Product__r.Each_Machine_Consumption_Cycle__c  *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Each Machine Consumption Cycle  *  Quantity</inlineHelpText>
    <label>Total Consumption/Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>