force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Gas_Required_in_Kg_hr__c.field-meta.xml
<CustomField>
    <fullName>Total_Gas_Required_in_Kg_hr__c</fullName>
    <formula>IF(
AND(
SBQQ__Product__r.RecordType.Name = &quot;Industrial Washing Machine&quot;,
OR(
ISPICKVAL(SBQQ__Product__r.Heating_type__c, &quot;Gas&quot;)
)
),
SBQQ__Quantity__c * SBQQ__Product__r.Gas_Each_Machine_Consumption_in_Kg_Hr__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gas Required in Kg/hr</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>