force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Steam_Required_in_Kg_hr__c.field-meta.xml
<CustomField>
    <fullName>Total_Steam_Required_in_Kg_hr__c</fullName>
    <description>Quantity * Capacity</description>
    <formula>IF(
    AND(
        SBQQ__Product__r.RecordType.Name = &quot;Industrial Washing Machine&quot;,
        OR(
            ISPICKVAL(SBQQ__Product__r.Heating_type__c, &quot;Dual (Electric &amp; Steam)&quot;),
            ISPICKVAL(SBQQ__Product__r.Heating_type__c, &quot;Steam&quot;)
        )
    ),
    SBQQ__Quantity__c * SBQQ__Product__r.Capacity__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Steam Required in Kg/hr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>