force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Water_Required_in_Liters__c.field-meta.xml
<CustomField>
    <fullName>Total_Water_Required_in_Liters__c</fullName>
    <formula>SBQQ__Product__r.Water_Required_Ltrs_Cycle__c  *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Water Required Ltrs Cycle  *  Quantity</inlineHelpText>
    <label>Total Water Required in Liters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>