force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Lock_QuoteLine_from_being_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_QuoteLine_from_being_editable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( SBQQ__Quote__r.SBQQ__Status__c , &apos;Approved&apos;),! BypassValidationCheckbox__c )</errorConditionFormula>
    <errorMessage>This record is locked you can&apos;t edit it.</errorMessage>
</ValidationRule>