force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Restrict_Discount_Essentials.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Discount_Essentials</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Bypass_Validation_Rules__c,
    NOT(CONTAINS($Profile.Name, &apos;Admin&apos;)),
    ISPICKVAL(SBQQ__Product__r.Family, &quot;Accessories&quot;),
    OR(
								SBQQ__Discount__c &gt; 0,
        ISCHANGED(SBQQ__Discount__c),
								SBQQ__AdditionalDiscountAmount__c &gt; 0,
								ISCHANGED(SBQQ__AdditionalDiscountAmount__c)
    )
)</errorConditionFormula>
    <errorMessage>You can&apos;t apply discounts on essentials</errorMessage>
</ValidationRule>