force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Restrict_Markup.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Markup</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   SBQQ__MarkupRate__c  &lt; 0, 
   SBQQ__MarkupRate__c  &gt; 0.30
)</errorConditionFormula>
    <errorMessage>Markup percentage must be between 0 and 30.</errorMessage>
</ValidationRule>