force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Restrict_Markup_IDW.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Markup_IDW</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				!$User.Bypass_Validation_Rules__c,
				NOT(CONTAINS($Profile.Name, &apos;Admin&apos;)), 
 			ISPICKVAL(SBQQ__Quote__r.SBQQ__Opportunity2__r.Product_category__c, &quot;IDW&quot;),
				OR(
								ISCHANGED(SBQQ__MarkupRate__c),
				    ISCHANGED(SBQQ__MarkupAmount__c)
				)			
)</errorConditionFormula>
    <errorMessage>Markup is not allowed for IDW quotes</errorMessage>
</ValidationRule>